# 303bass

./: CMakeLists.txt  Fr330hfr33.cpp  README.md  info.yaml  protocol.md
archive/: README.md
archive/0.9.0-rc1/: SHA256SUMS.txt
archive/0.9.1/: SHA256SUMS.txt
archive/0.9.2/: Fr330hfr33-v0.9.2.uf2  SHA256SUMS.txt
archive/pre-0.9.1-experimental/: Fr330hfr33-waveform-distortion-experimental.uf2
experimental_waveform_distortion/: CMakeLists.txt  Fr330hfr33.cpp  Fr330hfr33_LUT.cpp  Fr330hfr33_LUT.h  README.md  build_experimental.sh  info.yaml  protocol.md  tusb_config.h  usb_descriptors.c
experimental_waveform_distortion/uf2/: Fr330hfr33-waveform-distortion-experimental.uf2
experimental_waveform_distortion/web_config/: Fr330hfr33.html
uf2/: Fr330hfr33-v0.9.0-rc1.uf2  Fr330hfr33-v0.9.1.uf2  Fr330hfr33-v0.9.3.uf2  SHA256SUMS.txt
web_config/: Fr330hfr33.html
